--- a/vignettes/lab_report_knapsack.Rmd
+++ b/vignettes/lab_report_knapsack.Rmd
@@ -19,7 +19,122 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(lab6)
+library(profvis)
+library(parallel)
 ```
+
+# Profiling
+
+Profiling could be manually run on profile_provis.R file
+
+![Profile by using 'profvis'](profileImage.png)
+
+# LAB 06 Answers
+
+**Question: 1.1.2**
+How much time does it takes to run the algorithm for n = 16 objects?
+
+```c
+
+library(profvis)
+
+profvis({
+  set.seed(42)
+  n <- 2000
+  knapsack_objects <-
+    data.frame(
+      w=sample(1:4000, size = n, replace = TRUE),
+      v=runif(n = n, 0, 10000)
+    )
+  # ----- Brute Force Knapsack ------ #
+  item1 <- brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500)
+  # ----- Brute Force Knapsack ------ #
+})
+```
+
+**Answer:**
+By using profvis, for n = 16 , time = 730ms (0.73 seconds)
+
+**Question: 1.1.3**
+How much time does it takes to run the algorithm for n = 500 objects?
+
+```c
+
+library(profvis)
+
+profvis({
+  set.seed(42)
+  n <- 2000
+  knapsack_objects <-
+    data.frame(
+      w=sample(1:4000, size = n, replace = TRUE),
+      v=runif(n = n, 0, 10000)
+    )
+  # ----- Dynamic Programming for Knapsack ----- #
+  item3 <- dynamic_knapsack(x = knapsack_objects[1:500,], W = 3500)
+  # ----- Dynamic Programming for Knapsack ----- #
+})
+```
+**Answer:**
+By using profvis, for n = 500, time = 1340ms (1.34 seconds)
+
+**Question: 1.1.4**
+How much time does it takes to run the algorithm for n = 1000000 objects?
+
+```c
+
+library(profvis)
+
+profvis({
+  set.seed(42)
+  n <- 2000
+  knapsack_objects <-
+    data.frame(
+      w=sample(1:4000, size = n, replace = TRUE),
+      v=runif(n = n, 0, 10000)
+    )
+  # ----- Greedy heuristic for Knapsack ----- #
+  item4 <- greedy_knapsack(x = knapsack_objects[1:1000000,], W = 3500)
+  # ----- Greedy heuristic for Knapsack ----- #
+})
+```
+
+**Answer:**
+By using profvis, for n = 1000000, time = 1090ms (1.09 seconds)
+
+**Question: 1.1.6**
+What performance gain could you get by trying to improving your code?
+
+**Answer:**
+lineprof is not working properly on mac machines. Therefore 'profvis' package has been implemented.
+
+By using 'profvis' we found that 'combn' function takes more time. Therefore we implemented parallel programing for 'combn'.
+
+**Question: 1.1.8**
+What performance gain could you get by parallelizing brute force search?
+
+```c
+
+library(profvis)
+
+profvis({
+  set.seed(42)
+  n <- 2000
+  knapsack_objects <-
+    data.frame(
+      w=sample(1:4000, size = n, replace = TRUE),
+      v=runif(n = n, 0, 10000)
+    )
+  
+  # ----- Brute Force Knapsack -with Parallel ----- #
+  item2 <- brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500, parallel = TRUE)
+  # ----- Brute Force Knapsack -with Parallel ----- #
+})
+```
+
+**Answer:**
+Without Parallel, Time = 730ms
+With Parallel, Time = 110ms
 
 
 # Using the algorithms
